--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.apps.reinhardt2.love2brew" >
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -20,6 +24,7 @@
             android:name="com.apps.reinhardt2.love2brew.TabbedBrewer"
             android:label="@string/title_activity_tabbed_brewer" >
         </activity>
+        <receiver android:name=".AlarmNotificationReceiver"> </receiver>
     </application>
 
 </manifest>
