--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v13:21.0.2'
+    compile files('libs/org.apache.commons.net_2.0.0.v200905272248.jar')
 }
