--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,14 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.apps.reinhardt2.love2brew.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-        android:name="com.apps.reinhardt2.love2brew.TabbedBrewer"
-        android:label="@string/title_activity_tabbed_brewer" >
-    </activity>
         <activity
             android:name="com.apps.reinhardt2.love2brew.TabView"
             android:label="@string/title_activity_tabview" >
