--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,21 @@
 
 buildscript {
     repositories {
-        jcenter()
+        //GOOGLE
+        //jcenter()
+
+        //AMAZON
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        //GOOGLE
+        //classpath 'com.android.tools.build:gradle:1.0.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        //AMAZON
+        classpath 'com.amazon.device.tools.build:gradle:1.0.+'
     }
+
+
 }
 
 allprojects {
